--- a/.air.toml
+++ b/.air.toml
@@ -3,9 +3,9 @@ tmp_dir = "tmp"
 
 [build]
   bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main src/main.go"
+  cmd = "go build -o ./tmp/main main.go"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "src/client", "bin"]
+  exclude_dir = ["assets", "tmp", "vendor", "client", "bin"]
   exclude_file = []
   exclude_regex = []
   exclude_unchanged = false
