feat: auth frontend

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -33,7 +33,6 @@
 		"@leveluptuts/g-query": "^0.2.2",
 		"@leveluptuts/svelte-toy": "^0.0.18",
 		"graphql-tag": "^2.12.6",
-		"svelte-forms-lib": "^2.0.1",
-		"yup": "^0.32.11"
+		"jwt-decode": "^3.1.2"
 	}
 }
